k8s/00-namespace-config.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ridersos
